--- a/Samples/ParseySharp.SampleWeb/ParseySharp.SampleWeb.csproj
+++ b/Samples/ParseySharp.SampleWeb/ParseySharp.SampleWeb.csproj
@@ -18,5 +18,6 @@
     <ProjectReference Include="..\..\ParseySharp.Avro.AspNetCore\ParseySharp.Avro.AspNetCore.csproj" />
     <ProjectReference Include="..\..\ParseySharp.Json\ParseySharp.Json.csproj" Condition="Exists('..\..\ParseySharp.Json\ParseySharp.Json.csproj')" />
     <ProjectReference Include="..\..\ParseySharp.Swashbuckle\ParseySharp.Swashbuckle.csproj" />
+    <ProjectReference Include="..\..\ParseySharp.Refine\ParseySharp.Refine.csproj" />
   </ItemGroup>
 </Project>
