--- a/ParseySharp.YamlDotNet/ParseySharp.YamlDotNet.csproj
+++ b/ParseySharp.YamlDotNet/ParseySharp.YamlDotNet.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>ParseySharp.YamlDotNet</PackageId>
+    <Version>0.1.0</Version>
+    <Description>YamlDotNet navigator for ParseySharp: run parsers over YAML nodes.</Description>
+    <PackageTags>$(PackageTags);yaml;yamldotnet</PackageTags>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
