--- a/ParseySharp.NewtonsoftJson/ParseySharp.NewtonsoftJson.csproj
+++ b/ParseySharp.NewtonsoftJson/ParseySharp.NewtonsoftJson.csproj
@@ -1,9 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>ParseySharp.NewtonsoftJson</PackageId>
+    <Version>0.1.0</Version>
+    <Description>Newtonsoft.Json navigator for ParseySharp: run parsers over JToken.</Description>
+    <PackageTags>$(PackageTags);newtonsoftjson;json</PackageTags>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
