--- a/ParseySharp/ParseySharp.csproj
+++ b/ParseySharp/ParseySharp.csproj
@@ -5,21 +5,22 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>ParseySharp</PackageId>
-    <Version>0.1.0</Version>
-    <Authors>Your Name</Authors>
-    <Description>ParseySharp: A C# Parsing/Validation Library</Description>
-    <PackageTags>parsing;parser;utilities;csharp</PackageTags>
-    <RepositoryUrl>https://github.com/yourname/parsesharp</RepositoryUrl>
+    <Version>0.1.0-beta.1</Version>
+    <Description>ParseySharp: functional parser combinators with multi-carrier navigation (JSON, XML, YAML, Protobuf, MessagePack, Avro).</Description>
+    <PackageTags>$(PackageTags);parser;combinators</PackageTags>
+    <RepositoryUrl>https://github.com/parseysharp/ParseySharp</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageProjectUrl>https://github.com/yourname/parsesharp</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/parseysharp/ParseySharp</PackageProjectUrl>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
   </PropertyGroup>
+
+  
 
   <ItemGroup>
     <PackageReference Include="LanguageExt.Core" Version="5.0.0-beta-54" />
