nuget publish on tag

--- a/Samples/ParseySharp.SampleWeb/ParseySharp.SampleWeb.csproj
+++ b/Samples/ParseySharp.SampleWeb/ParseySharp.SampleWeb.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="LanguageExt.Core" Version="5.0.0-beta-54" />
