--- a/ParseySharp.Tests/ParseySharp.Tests.csproj
+++ b/ParseySharp.Tests/ParseySharp.Tests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.402.29" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,6 +27,7 @@
     <ProjectReference Include="..\ParseySharp.YamlDotNet\ParseySharp.YamlDotNet.csproj" />
     <ProjectReference Include="..\ParseySharp.MessagePack\ParseySharp.MessagePack.csproj" />
     <ProjectReference Include="..\ParseySharp.Avro\ParseySharp.Avro.csproj" />
+    <ProjectReference Include="..\ParseySharp.DynamoDb\ParseySharp.DynamoDb.csproj" />
   </ItemGroup>
 
 </Project>
