--- a/ParseySharp.DynamoDb/ParseySharp.DynamoDb.csproj
+++ b/ParseySharp.DynamoDb/ParseySharp.DynamoDb.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="LanguageExt.Core" Version="5.0.0-beta-54" />
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.402.29" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="[4.0.6.3,5.0.0)" />
   </ItemGroup>
 
   <ItemGroup>
