--- a/Samples/ParseySharp.SampleWeb/ParseySharp.SampleWeb.csproj
+++ b/Samples/ParseySharp.SampleWeb/ParseySharp.SampleWeb.csproj
@@ -20,5 +20,6 @@
     <ProjectReference Include="..\..\ParseySharp.Json\ParseySharp.Json.csproj" Condition="Exists('..\..\ParseySharp.Json\ParseySharp.Json.csproj')" />
     <ProjectReference Include="..\..\ParseySharp.Swashbuckle\ParseySharp.Swashbuckle.csproj" />
     <ProjectReference Include="..\..\ParseySharp.Refine\ParseySharp.Refine.csproj" />
+    <ProjectReference Include="..\..\ParseySharp.Config\ParseySharp.Config.csproj" />
   </ItemGroup>
 </Project>
